# agent-team

./: .SynologyDriveIgnore  .gitignore  .mcp.json  CLAUDE.md  CONVENTIONS.md  LICENSE  QUICKSTART.md  README.md  SERVICES_QUICKSTART.md  SETUP.md  Useful Commands.md  setup.ps1  setup.sh  team.json
.github/: secret_scanning.yml
Agents/: general-research-agent.sh  idea-verifier-agent.sh  project-initializer-agent.sh
Research/: Backlog-Research-Ideas.md  SpotPoint-PRD.json  last_research_buffer.md
Templates/: DEV.template.md  HANDOFF.md  SPEC.template.md  design-specs.template.md  helm-business-brief.md  image-prompt-examples.json  image-prompt-template.json  prompt_design_reviewer.txt  prompt_expo_expert.txt  prompt_fusion_builder.txt  prompt_n8n_connector.txt  prompt_page_designer.txt  prompt_supabase_expert.txt  prompt_wordpress_expert.txt  wp-credentials.template.yaml
config/: Caddyfile  contacts.json  mcp-all.json  network.json  orchestrator.json  sandbox-defaults.json  workers.json  xorg-headless-2560x1440.conf
notes/: AI-Build-Instructions.md  Expo-Commands.md  Gemini-CLI-Reference.md  Personal-Todo.md  n8n-Automation-Preferences.md
reports/: 404_report.md  discord_integration_report.md  openclaw_investigation.md  walkthrough.md
tools/wp-agent/: ACTIONS.md  README.md  config.example.yaml  endpoints.yaml  pyproject.toml  requirements.txt
tools/wp-agent/api/: __init__.py  server.py
tools/wp-agent/src/: __init__.py  cli.py  orchestrator.py
tools/wp-agent/src/agents/: __init__.py  base.py  comments.py  media.py  menus.py  pages.py  plugins.py  posts.py  search.py  settings.py  taxonomy.py  users.py
tools/wp-agent/src/core/: __init__.py  client.py
(+1272 files in other folders)
